--- a/.github/workflows/run-it.yml
+++ b/.github/workflows/run-it.yml
@@ -1,1 +1,10 @@
 name: run-it-now
+on:
+  [push]
+jobs:
+  test1:
+    runs-on: ubuntu-latest
+      steps:
+        - run: echo "test"
+        
+  
